[package]

name = "if_chain"
version = "1.0.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

license = "MIT/Apache-2.0"
documentation = "https://docs.rs/if_chain"
repository = "https://github.com/lfairy/if_chain"
description = "Macro for writing nested `if let` expressions."
categories = ["rust-patterns", "no-std"]
readme = "README.md"

[badges]
travis-ci = { repository = "lfairy/if_chain" }
